# feed-aggregator

./: .gitignore  README.md  pyproject.toml
src/feed_aggregator/: atom.jinja2  html.jinja2  main.py  style.css
