[project]
name = "feed-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "lxml>=5.3.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
feed-aggregator = "feed_aggregator.main:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/feed_aggregator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

